--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/EricaBabb/employee-database#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "inquirer": "^8.1.1",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
